Easier way to stop loader and loader message from overlapping

--- a/control_server/static/css/camera-control-simplified.css
+++ b/control_server/static/css/camera-control-simplified.css
@@ -20,15 +20,13 @@ html, body {
 }
 
 .loader {
+    display: inline-block;
     border: 16px solid #DBDBDB;
     border-radius: 50%; /* Creates a circle */
     border-top: 16px solid #2ECC71;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -100px;
     width: 200px;
     height: 200px;
+    margin: 30px;
     animation: spin 1s linear infinite; /* Creates a 1 sec infinite animation; same speed from start to end */
 }
   
@@ -36,10 +34,6 @@ html, body {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-}
-
-#loader-message {
-    margin-top: 25%;
 }
 
 #retake-button {
